# rscvp

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
bash/atlas/: README.md  animal.sh  animal_subregion.sh  batch.sh
bash/base/: bayes_sb15.sh  visual.sh
bash/beh/: README.md  batch_tactile.sh  sum.sh  tactile.sh
bash/blank/: batch_persistence.sh  db_update.sh  db_update_volumetric.sh
bash/dark/: bayes_sb15.sh  db_update_volumetric.sh  generic.sh  session.sh  volumetric.sh
bash/dark/csv_parq/: batch_spatial.sh  spatial_var.sh
bash/ldl/: batch_persistence.sh  bayes_sb15.sh  concat.sh  db_update.sh  generic.sh  persistent_auto.sh  spatial.sh
bash/rev/: rev_spatial.sh
bash/vop/: README.md  batch_persistence.sh  bayes_sb15.sh  db_update.sh  db_update_volumetric.sh  generic.sh  persistent_auto.sh  spatial.sh  stat.sh  volumetric.sh
bash/vop/csv_parq/: batch_generic.sh  batch_pf.sh  batch_spatial.sh  batch_visual.sh  generic_var.sh  pf_var.sh  spatial_var.sh  visual_dir_var.sh  visual_sftf_var.sh  visual_var.sh
bash/vr/: batch_persistence.sh  concat.sh  db_update.sh  db_update_volumetric.sh  spatial.sh  spatial_belt.sh  volumetric.sh
bash/vr/csv_parq/: batch_pf.sh  batch_spatial.sh
colab/: rscvp_histology_colab.ipynb  rscvp_physiology_colab.ipynb
configs/: argp_doc.txt
configs/cams/: labcams_1p.json  labcams_2p.json  pycams.json  pycams_default.json
configs/s2p/: default_ops.json  ops_4etl.json  ops_ch2_4etl.json  ops_ch2_single.json  ops_single.json
configs/sbx/rig1/: scanbox_config.m
configs/stimpy/: README.md  default_preferences_github.json  example_preferences_bitbucket.json  screen_calibrate_rig1.py
demo/: _test.py  example_3d_reconstruction.py  example_decoding.py  example_dorsal_roi.py  example_position_map.py  example_registered_slice.py  example_visual_polars.py  example_visual_reliability.py  example_visual_sftf_dot.py  example_visual_tuning.py  util.py
docs/: gen_api.py  workflow.py
docs/source/: conf.py  index.rst
docs/source/api/: rscvp.atlas._ccf.rst  rscvp.atlas._cellpose.rst  rscvp.atlas.core.rst  rscvp.atlas.dir.rst  rscvp.atlas.main_expr_level.rst  rscvp.atlas.main_expr_range.rst  rscvp.atlas.main_roi_atlas.rst  rscvp.atlas.main_roi_quant.rst  rscvp.atlas.main_roi_quant_batch.rst  rscvp.atlas.main_roi_query.rst  rscvp.atlas.main_roi_query_batch.rst  rscvp.atlas.main_roi_top_view.rst  rscvp.atlas.main_roi_view.rst  rscvp.atlas.main_slice.rst  rscvp.atlas.main_slice_transform.rst  rscvp.atlas.main_ternary.rst  rscvp.atlas.rst  rscvp.atlas.util_plot.rst  rscvp.behavioral.main_batch.rst  rscvp.behavioral.main_dir_locomotion.rst  rscvp.behavioral.main_summary.rst  rscvp.behavioral.main_tactile_batch.rst  rscvp.behavioral.main_tactile_summary.rst  rscvp.behavioral.main_vr_licking.rst  rscvp.behavioral.main_vr_running.rst  rscvp.behavioral.main_vstim_locomotion.rst  rscvp.behavioral.rst  rscvp.behavioral.util.rst  rscvp.behavioral.util_plot.rst  rscvp.concat.main_csv_cell.rst  rscvp.concat.rst  rscvp.model.bayes_decoding.cache_bayes.rst  rscvp.model.bayes_decoding.main_cache_bayes.rst  rscvp.model.bayes_decoding.main_decode_analysis.rst  rscvp.model.bayes_decoding.main_disengagement.rst  rscvp.model.bayes_decoding.main_posdc_cache.rst  rscvp.model.bayes_decoding.rst  rscvp.model.bayes_decoding.util.rst  rscvp.model.bayes_decoding.util_plot.rst  rscvp.model.glm.input.rst  (+175 more)
res/atlas/: allen_mouse_10um_v1.2.txt
res/database/: example_alter_column_constraint.sql  example_modification_db_fields.sql
res/duino/: rig1_duino.ino
res/gspread/: apcls_tac.csv
res/ijm/: 1.SplitMergeChannels.ijm  3.RGBmerge.ijm  CziSplitZproj.ijm  Generate_ROI_tiff_file.ijm  Generate_ROI_tiff_file_2colors.ijm  LsmSplitZproj.ijm  MergeRoiResizeDual.ijm  MergeRoiResizeSingle.ijm  scale_0.25_rotate.ijm  tif zever.ijm
test/_local/: test_atlas.py  test_behavioral_track.py  test_glm.py  test_position_decode.py  test_rastermap.py  test_retinotopic.py  test_selection.py  test_spatial.py  test_sql_db.py  test_statistic.py  test_topology.py  test_trial_selection.py  test_visual.py
test/local/: test_atlas.py  test_behavioral_track.py  test_glm.py  test_position_decode.py  test_rastermap.py  test_retinotopic.py  test_selection.py  test_spatial.py  test_sql_db.py  test_statistic.py  test_topology.py  test_visual.py  util.py
(+276 files in other folders)
