[project]
name = "rscvp"
version = "0.0.1"
requires-python = ">=3.10"
description = "Analysis for retrosplenial cortex project"
authors = [
    { name = "Yu-Ting Wei", email = "ytsimon2004@gmail.com" }
]
readme = "README.md"
keywords = ["Neuroscience", "visual neuroscience", "brain mapping", "spatial navigation"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    'Intended Audience :: Science/Research',
    "Typing :: Typed",
]

dependencies = [
    "neura-library[all]",
    "stimpyp",
    "scikit-learn",
    "iblatlas"
]


[project.optional-dependencies]

opt = ["memory_profiler", "pingouin"]

doc = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-toolbox",
    "sphinx-rtd-theme",
    "sphinx-prompt",
    "sphinx_copybutton"
]

all = ["rscvp[opt]", "rscvp[doc]"]


[project.urls]
Homepage = "https://github.com/ytsimon2004/rscvp"
Documentation = "https://neuralib.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/ytsimon2004/rscvp"
Issues = "https://github.com/ytsimon2004/rscvp/issues"


[tool.setuptools.packages.find]
where = ["src"]


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
