[project]
name = "rscvp"
version = "0.0.1"
requires-python = ">=3.10"
description = "Analysis for retrosplenial cortex project"
authors = [{ name = "Yu-Ting Wei", email = "ytsimon2004@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["Neuroscience", "visual neuroscience", "brain mapping", "spatial navigation"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    'Intended Audience :: Science/Research',
    "Typing :: Typed",
]

dependencies = [
    "neura-library[atlas]",
    "neura-library[imaging]",
    "stimpyp",
    "scikit-learn",
    "iblatlas"
]


[project.optional-dependencies]

opt = [
    "memory_profiler", # more memory heavily data io
    "pingouin", # statistic
    "gspread", # statistic
]

doc = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-toolbox",
    "sphinx-rtd-theme",
    "sphinx-prompt",
    "sphinx_copybutton",
    "rscvp[opt]"
]

all = ["rscvp[opt]"]


[project.urls]
Homepage = "https://github.com/ytsimon2004/rscvp"
Documentation = "https://neuralib.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/ytsimon2004/rscvp"
Issues = "https://github.com/ytsimon2004/rscvp/issues"


[tool.setuptools.packages.find]
where = ["src"]


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
