[project]
name = "rscvp"
version = "0.0.1"
requires-python = ">=3.10"
description = "Analysis for retrosplenial cortex project"
authors = [{ name = "Yu-Ting Wei", email = "ytsimon2004@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["Neuroscience", "visual neuroscience", "brain mapping", "spatial navigation"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    'Intended Audience :: Science/Research',
    "Typing :: Typed",
]

dependencies = [
    "argclz>=1.0.0",
    "sqlclz>=0.0.1",
    "iblatlas>=0.9.0",
    "neura-library[atlas,imaging]",
    "scikit-learn>=1.7.0",
    "stimpyp>=0.3.1",
]


[project.optional-dependencies]

opt = [
    "memory_profiler",  # for memory-heavy data I/O
    "pingouin",
    "gspread",
    "rastermap"
]

doc = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-toolbox",
    "sphinx-rtd-theme",
    "sphinx-prompt",
    "sphinx_copybutton",
    #
    "rscvp[opt]",
    "neura-library[all]",
]

all = ["rscvp[opt]"]


[project.urls]
Homepage = "https://github.com/ytsimon2004/rscvp"
Documentation = "https://rscvp.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/ytsimon2004/rscvp"
Issues = "https://github.com/ytsimon2004/rscvp/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
